# referal-api-test

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 7425dd106fb8_database_creation.py
src/: config.py  main.py  metadata.py
src/api/referal_codes/v1/: referal_utils.py
src/api/referal_codes/v1/routers/: __init__.py  referal_code_router.py
src/api/referal_codes/v1/service/: __init__.py  referal_code_service.py
src/api/users/v1/auth/: helpers.py  validate.py
src/api/users/v1/routers/: __init__.py  jwt_auth.py  user_router.py
src/api/users/v1/service/: __init__.py  jwt_auth_service.py  user_service.py
src/database/: db.py
src/models/: __init__.py  referal_code_model.py  user_model.py
src/models/mixins/: custom_types.py
src/repositories/: __init__.py  referal_code_repository.py  user_repository.py
src/schemas/: referal_code_schema.py  user_schema.py
src/utils/: repository.py  service.py  unit_of_work.py
src/workers/: email_task.py
